--- a/proyecto/public/index.html
+++ b/proyecto/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app"/>
     <link rel="stylesheet" href="./styles/styles.css" >
-    <title>Proyecto</title>
+    <title>We Stream</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
